# EFOPT

./: CMakeLists.txt  README.md  config.json  efopt.hpp  test_efopt.cpp
include/efopt/: efopt.hpp
src/: efopt.cpp
